--- a/tex/sampler.tex
+++ b/tex/sampler.tex
@@ -368,7 +368,7 @@ convenient to not be \emph{forced} to use it, but I do want to have the
 \texttt{np.random} module, I would not be able to do).
 
 So, if the \texttt{rso} variable is not given, then the constructor
-defaults to using \texttt{np.random.multinomial}. Otherwise, it uses the
+defaults to \texttt{np.random.multinomial}. Otherwise, it uses the
 multinomial sampler from the \texttt{RandomState} object
 itself\footnote{The functions in \texttt{np.random} actually do rely on
   a random number generator that we can control: NumPy's global random
