--- a/tex/dagoba.tex
+++ b/tex/dagoba.tex
@@ -116,9 +116,9 @@ of SQL.
 
 What would we like to write? Something both concise and flexible;
 something that models our query in a natural way and extends to other
-queries like it. \texttt{second\_cousins\_once\_removed('Thor')} is
-concise, but it doesn't give us any flexibility. The SQL above is
-flexible, but lacks concision.
+queries like it. \texttt{second\_cousins('Thor')} is concise, but it
+doesn't give us any flexibility. The SQL above is flexible, but lacks
+concision.
 
 Something like
 \texttt{Thor.parents.parents.parents.children.children.children} strikes
@@ -185,8 +185,12 @@ children = function(x) { return E.reduce(
   function(acc, e) { return ~x.indexOf(e[0]) ? acc.concat(e[1]) : acc }, [] )}
 \end{verbatim}
 
-Now we can say something like
-\texttt{children(children(children(parents(parents(parents({[}8{]}))))))}.
+Now we can say something like:
+
+\begin{verbatim}
+    children(children(children(parents(parents(parents([8]))))))
+\end{verbatim}
+
 It reads backwards and gets us lost in silly parens, but is otherwise
 pretty close to what we wanted. Take a minute to look at the code. Can
 you see any ways to improve it?
@@ -471,12 +475,17 @@ pretty good way of expressing that. Each \texttt{parents} or
 contains a reference to its \emph{pipetype}, which is the function that
 performs that step's operation.
 
-That query in our actual system might look like
-\texttt{g.v('Thor').out().out().out().in().in().in()}. Each of the steps
-is a function call, and so they can take \emph{arguments}. The
-interpreter passes the step's arguments to the step's pipetype function,
-so in the query \texttt{g.v('Thor').out(2, 3)} the \texttt{out} pipetype
-function would receive \texttt{{[}2, 3{]}} as its first parameter.
+That query in our actual system might look like:
+
+\begin{verbatim}
+    g.v('Thor').out().out().out().in().in().in()
+\end{verbatim}
+
+Each of the steps is a function call, and so they can take
+\emph{arguments}. The interpreter passes the step's arguments to the
+step's pipetype function, so in the query \texttt{g.v('Thor').out(2, 3)}
+the \texttt{out} pipetype function would receive \texttt{{[}2, 3{]}} as
+its first parameter.
 
 We'll need a way to add steps to our query. Here's a helper function for
 that:
@@ -915,9 +924,14 @@ many duplicates, however. In fact there would be at least four copies of
 Thor himself. (Can you think of a time when there might be more?)
 
 To resolve this we introduce a new pipetype called `unique'. Our new
-query
-\linebreak \texttt{g.v('Thor').in().in().out().out().unique().run()}
-produces output in one-to-one correspondence with the grandchildren.
+query produces output in one-to-one correspondence with the
+grandchildren:
+
+\begin{verbatim}
+    g.v('Thor').in().in().out().out().unique().run()
+\end{verbatim}
+
+The pipetype implementation:
 
 \begin{verbatim}
 Dagoba.addPipetype('unique', function(graph, args, gremlin, state) {
@@ -1248,7 +1262,7 @@ Dagoba.G.findVertices = function(args) {                      // vertex finder h
 
 This function receives its arguments as a list. If the first one is an
 object it passes it to \texttt{searchVertices}, allowing queries like
-\texttt{g.v(\{\_id:'Thor'\}).run()} or
+\newline \texttt{g.v(\{\_id:'Thor'\}).run()} or
 \texttt{g.v(\{species: 'Aesir'\}).run()}.
 
 Otherwise, if there are arguments it gets passed to
@@ -1458,11 +1472,18 @@ separation between when our compiler runs its optimizations and when all
 the thunking occurs during runtime. In our case we don't have that
 advantage: because we're using method chaining to implement a fluent
 interface \footnote{Method chaining lets us write
-  \texttt{g.v('Thor').in().out().run()} instead of
-  \texttt{var query = g.query(); query.add('vertex', 'Thor'); query.add('in'); query.add('out'); query.run()}}
-if we also use thunks to achieve laziness we would thunk each new method
-as it is called, which means by the time we get to \texttt{run()} we
-have only a single thunk as our input, and no way to optimize our query.
+  \texttt{g.v('Thor').in().out().run()} instead of:} if we also use
+thunks to achieve laziness we would thunk each new method as it is
+called, which means by the time we get to \texttt{run()} we have only a
+single thunk as our input, and no way to optimize our query.
+
+\begin{verbatim}
+    var query = g.query(); 
+    query.add('vertex', 'Thor'); 
+    query.add('in'); 
+    query.add('out'); 
+    query.run()`
+\end{verbatim}
 
 Interestingly, our fluent interface hides another difference between our
 query language and regular programming languages. The query
@@ -2083,8 +2104,12 @@ g.v('Thor').out().as('a')
 
 after the query transformers have all run.
 
-We could run the \texttt{times} transformer first, to produce
-\linebreak \texttt{g.v('Thor').out().all().out().all().out().all().run()}.
+We could run the \texttt{times} transformer first, to produce:
+
+\begin{verbatim}
+    g.v('Thor').out().all().out().all().out().all().run()
+\end{verbatim}
+
 Then run the \texttt{all} transformer and have it transform each
 \texttt{all} into a uniquely labeled \texttt{as}, and put a
 \texttt{merge} after the last \texttt{as}.
