--- a/tex/web-server.tex
+++ b/tex/web-server.tex
@@ -234,9 +234,10 @@ But \texttt{RequestHandler} isn't the whole story: we still need the
 last three lines to actually start a server running. The first of these
 lines defines the server's address as a tuple: the empty string means
 ``run on the current machine'', and 8080 is the port. We then create an
-instance of \texttt{BaseHTTPServer.HTTPServer} with that address and the
-name of our request handler class as parameters, then ask it to run
-forever (which in practice means until we kill it with Control-C).
+instance of \newline \texttt{BaseHTTPServer.HTTPServer} with that
+address and the name of our request handler class as parameters, then
+ask it to run forever (which in practice means until we kill it with
+Control-C).
 
 If we run this program from the command line, it doesn't display
 anything:
@@ -588,9 +589,8 @@ clutter in the main \texttt{RequestHandler}. \texttt{test} checks
 whether the path is a directory containing an \texttt{index.html} page,
 and \texttt{act} just asks the main request handler to serve that page.
 
-The only change needed to \texttt{RequestHandler} to include this logic
-is to add a \texttt{case\_directory\_index\_file} object to our
-\texttt{Cases} list:
+The only change needed to \texttt{RequestHandler} is to add a
+\texttt{case\_directory\_index\_file} object to our \texttt{Cases} list:
 
 \begin{verbatim}
     Cases = [case_no_file(),
@@ -654,7 +654,8 @@ class RequestHandler(BaseHTTPServer.BaseHTTPRequestHandler):
     def list_dir(self, full_path):
         try:
             entries = os.listdir(full_path)
-            bullets = ['<li>{0}</li>'.format(e) for e in entries if not e.startswith('.')]
+            bullets = ['<li>{0}</li>'.format(e) 
+                for e in entries if not e.startswith('.')]
             page = self.Listing_Page.format('\n'.join(bullets))
             self.send_content(page)
         except OSError as msg:
@@ -699,8 +700,8 @@ class case_cgi_file(object):
         handler.run_cgi(handler.full_path)
 \end{verbatim}
 
-The test is simple: does the file path end with \texttt{.py}? The action
-is equally simple: tell \texttt{RequestHandler} to run this program.
+The test is simple: does the file path end with \texttt{.py}? If so, we
+tell \texttt{RequestHandler} to run this program.
 
 \begin{verbatim}
     def run_cgi(self, full_path):
